# NLP-correlation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exectuable.sh
src/: CMakeLists.txt  debug.sh  exectuable.sh  main.cpp  valgrind-exe.sh
src/docs/: readme.txt
src/srcs/: cfg-loader.cpp  connection.cpp  connection.hpp  denoise.cpp  denoise.hpp  dic-parser.cpp  dic-parser.hpp  disk-dic.cpp  disk-dic.hpp  format-later-stage.cpp  format-later-stage.hpp  formatParsing.cpp  python-module.cpp  scripts-config.hpp  scripts-manager.cpp  scripts-manager.hpp  socket-ipc.cpp  socket-ipc.hpp  statistics.cpp  statistics.hpp  stringTools.cpp  stringTools.h
src/srcs/scripts/: connection.py  main.py
